Quick fix to blurry Bold font on Firefox

--- a/buddycloud-theme/static/css/buddycloud-style.css
+++ b/buddycloud-theme/static/css/buddycloud-style.css
@@ -537,7 +537,8 @@ rect[fill='#ffffff'] {
     font-family: OpenSansBold;
     fill: white;
     stroke: white;
-    stroke-width: -0.2px;
+    stroke-width: 0px;
+    stroke-width: -0.4px;
 }
 
 .seq-diag-secondary tspan {
